--- a/Assets/ir.soor.pooler/Scripts/Runtime/Soor.Pooler.asmdef
+++ b/Assets/ir.soor.pooler/Scripts/Runtime/Soor.Pooler.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Soor.Pooler",
-    "rootNamespace": "Soor.Pooler",
+    "name": "SoorPooler",
+    "rootNamespace": "SoorPooler",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
